--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -7,8 +7,10 @@ steps:
           - lib/**
           - commands/**
 
+
   - label: ":sparkles: Lint"
     plugins:
+      docker-compose#v3.3.0:
       plugin-linter#v2.0.0:
         id: docker-compose
 
