--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -10,9 +10,8 @@ steps:
 
   - label: ":sparkles: Lint"
     plugins:
-      docker-compose#v3.3.0:
       plugin-linter#v2.0.0:
-        id: docker-compose
+        id: docker-compose#3.3.0
 
   - label: ":bash: Tests"
     plugins:
