--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -10,8 +10,10 @@ steps:
 
   - label: ":sparkles: Lint"
     plugins:
+      docker-compose#v3.3.0
       plugin-linter#v2.0.0:
-        id: docker-compose#3.3.0
+        id: docker-compose
+       
 
   - label: ":bash: Tests"
     plugins:
