--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -6,11 +6,14 @@ steps:
           - hooks/**
           - lib/**
           - commands/**
-
+      
+  - name: "Docker Test %n"
+  command: "echo Testing docker Version"
+  plugins:
+    - docker-compose#v3.3.0
 
   - label: ":sparkles: Lint"
     plugins:
-      docker-compose#v3.3.0
       plugin-linter#v2.0.0:
         id: docker-compose
        
