--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -12,7 +12,7 @@ steps:
       plugin-linter#v2.0.0:
         id: docker-compose
        
-  - label: ":bash: Tests"$
+  - label: ":bash: Tests"
     plugins:
       {BUILDKITE_REPO}#${BUILDKITE_COMMIT}:
         run: tests
