--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -13,9 +13,10 @@ steps:
         id: docker-compose
        
   - label: ":bash: Tests"
+  - command: yarn install && yarn run test
     plugins:
       ${BUILDKITE_REPO}#${BUILDKITE_COMMIT}:
-        run: python testareacalc.py
+        run: "python testareacalc.py"
 
   - wait
   - label: run, with links that fail
