--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -70,7 +70,7 @@ steps:
     plugins:
        - docker-compose#v3.3.0:
             build: helloworld
-            image-repository: ${DOCKER_REPO-buildkiteci/docker-compose-buildkite-plugin}
+            image-repository: sas94086/sandratest01:docker-compose-buildkite-plugin
             config: tests/composefiles/docker-compose.v2.1.yml
 
   - wait
