--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -52,7 +52,7 @@ steps:
     plugins:
          - docker-compose#v3.3.0:
              build: helloworld
-             image-repository: index.docker.io/sas94086/sandratest01
+             image-repository: 424332672450.dkr.ecr.us-east-1.amazonaws.com/sas94086:latest
              config: tests/composefiles/docker-compose.v2.0.yml
 
   - wait
@@ -70,7 +70,7 @@ steps:
     plugins:
        - docker-compose#v3.3.0:
             build: helloworld
-            image-repository: index.docker.io/sas94086/sandratest01
+            image-repository: 424332672450.dkr.ecr.us-east-1.amazonaws.com/sas94086:latest
             config: tests/composefiles/docker-compose.v2.1.yml
 
   - wait
@@ -94,7 +94,7 @@ steps:
     plugins:
        - docker-compose#v3.3.0:
            build: helloworldimage
-           image-repository: ${DOCKER_REPO-buildkiteci/docker-compose-buildkite-plugin}
+           image-repository: 424332672450.dkr.ecr.us-east-1.amazonaws.com/sas94086:latest
            config: tests/composefiles/docker-compose.v2.1.yml
            commmand: ["/hello"]
 
