--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -56,7 +56,7 @@ steps:
             no-include-email: true
        - docker-compose#v3.3.0:
             build: helloworld
-            image-repository: 424332672450.dkr.ecr.us-east-1.amazonaws.com/sas94086
+            image-repository: 424332672450.dkr.ecr.us-west-1.amazonaws.com/sas94086-2
             config: tests/composefiles/docker-compose.v2.0.yml
 
   - wait
