--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -51,10 +51,10 @@ steps:
     command: /hello
     plugins:
       - ecr#v1.1.4:
-        login: true
-        account_ids: 424332672450
-        no-include-email: true
-        region: us-west-1
+          login: true
+          account_ids: 424332672450
+          no-include-email: true
+          region: us-east-1
        - docker-compose#v3.3.0:
             build: helloworld
             image-repository: 424332672450.dkr.ecr.us-east-1.amazonaws.com/sas94086:latest
