--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -70,7 +70,7 @@ steps:
     plugins:
        - docker-compose#v3.3.0:
             build: helloworld
-            image-repository: 424332672450.dkr.ecr.us-east-1.amazonaws.com/sas94086
+            image-repository: 424332672450.dkr.ecr.us-east-1.amazonaws.com/sas94086:latest
             config: tests/composefiles/docker-compose.v2.1.yml
 
   - wait
@@ -112,7 +112,7 @@ steps:
     plugins:
        - docker-compose#v3.3.0:
            build: helloworld
-           image-repository: https://424332672450.dkr.ecr.us-east-1.amazonaws.com/sas94086:latest
+           image-repository: 424332672450.dkr.ecr.us-east-1.amazonaws.com/sas94086:latest
            image-name: llamas-build-${BUILDKITE_BUILD_NUMBER}
            config: tests/composefiles/docker-compose.v2.1.yml
 
