--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -72,14 +72,14 @@ steps:
   #          image-repository: 424332672450.dkr.ecr.us-east-1.amazonaws.com/sas94086:latest
   #          config: tests/composefiles/docker-compose.v2.1.yml
 
-  - wait
-  - label: run after build with v2.1
-    plugins:
-       - docker-compose#v3.3.0:
-           run: helloworld
-           require-prebuild: true
-           config: tests/composefiles/docker-compose.v2.1.yml
-           command: ["/hello"]
+  #- wait
+  #- label: run after build with v2.1
+  #  plugins:
+  #    - docker-compose#v3.3.0:
+  #        run: helloworld
+  #        require-prebuild: true
+  #         config: tests/composefiles/docker-compose.v2.1.yml
+  #         command: ["/hello"]
 
   - wait
   - label: run with default command
