--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -54,14 +54,14 @@ steps:
   #          image-repository: 424332672450.dkr.ecr.us-west-1.amazonaws.com/sas94086-2
   #          config: tests/composefiles/docker-compose.v2.0.yml
 
-  - wait
-  - label: run after build with v2.0
-    plugins:
-       - docker-compose#v3.3.0:
-           run: helloworld
-           require-prebuild: true
-           config: tests/composefiles/docker-compose-v2.0.yml
-           command: ["/hello"]
+  #- wait
+  #- label: run after build with v2.0
+  # plugins:
+  #    - docker-compose#v3.3.0:
+  #        run: helloworld
+  #        require-prebuild: true
+  #        config: tests/composefiles/docker-compose-v2.0.yml
+  #         command: ["/hello"]
 
   #- wait
   #- label: prebuild with v2.1
