--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -111,7 +111,7 @@ steps:
     plugins:
        - docker-compose#v3.3.0:
            build: helloworld
-           image-repository: 424332672450.dkr.ecr.us-east-1.amazonaws.com/sas94086:latest
+           image-repository: 424332672450.dkr.ecr.us-east-1.amazonaws.com/sas94086
            image-name: llamas-build-${BUILDKITE_BUILD_NUMBER}
            config: tests/composefiles/docker-compose.v2.1.yml
 
