--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -115,14 +115,14 @@ steps:
   #         image-name: llamas-build-${BUILDKITE_BUILD_NUMBER}
   #         config: tests/composefiles/docker-compose.v2.1.yml
 
-  - wait
-  - label: run after prebuild with custom image-name
-    plugins:
-       - docker-compose#v3.3.0:
-           run: helloworld
-           require-prebuild: true
-           config: tests/composefiles/docker-compose.v2.1.yml
-           commmand: ["/hello"]
+  #- wait
+  #- label: run after prebuild with custom image-name
+  # plugins:
+  #    - docker-compose#v3.3.0:
+  #        run: helloworld
+  #        require-prebuild: true
+  #        config: tests/composefiles/docker-compose.v2.1.yml
+  #        commmand: ["/hello"]
 
   - wait
   - label: push after build with custom image-name
